# python-django-base

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  setup.cfg
core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
core/templates/: template.html
core/templates/core/: template.html
docs/: README.txt  conf.py  index.rst
user/: __init__.py  apps.py
user/admin/: __init__.py  user.py  user_admin.py
user/managers/: __init__.py  user_manager.py
user/migrations/: 0001_initial.py  __init__.py
user/models/: __init__.py  _user.py  user.py
user/tests/: __init__.py
user/validators/: __init__.py  _alpha_and_numeric_validator.py  _each_case_validator.py  _special_characters_validator.py  alpha_and_numeric_validator.py  each_case_validator.py  special_characters_validator.py
user/views/: __init__.py
