[tool.poetry]
name = "django_base"
version = "0.1.0"
description = "A base django site setup"
authors = ["Daniel Osborne <danaosb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.9"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
