[tool.poetry]
name = "django_base"
version = "0.1.0"
description = "A base django site setup"
authors = ["Daniel Osborne <danaosb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.9"
Django = "^4.0"
django-bootstrap-v5 = "^1.0.7"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"

[tool.yapf]
based_on_style = "pep8"
spaces_around_default_or_named_assign = true
dedent_closing_brackets = true
coalesce_brackets = true
allow_split_before_dict_value = false
split_all_top_level_comma_separated_values = true
spaces_before_comment = 2

## TODO: configure yapfignore in here after next release. v0.31.0 doesn't support it yet.
#[tool.yapfignore]
#ignore_patterns = ["*/migrations"]

[tool.isort]
profile = "django"
extend_skip = ["migrations"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"