[tool.poetry]
name = "django_base"
version = "0.1.0"
description = "A base django site setup"
authors = ["Daniel Osborne <danaosb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.9"
Django = "^4.0"
django-bootstrap-v5 = "^1.0.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
black = "^21.12b0"

[tool.isort]
profile = "django"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
